--- a/apps/v4/content/docs/components/native-select.mdx
+++ b/apps/v4/content/docs/components/native-select.mdx
@@ -4,6 +4,13 @@ description: A styled native HTML select element with consistent design system i
 component: true
 ---
 
+import { InfoIcon } from "lucide-react"
+
+<Callout variant="info" icon={<InfoIcon className="!translate-y-[3px]" />}>
+  For a styled select component, see the [Select](/docs/components/select)
+  component.
+</Callout>
+
 <ComponentPreview name="native-select-demo" />
 
 ## Installation
