--- a/apps/v4/content/docs/(root)/changelog.mdx
+++ b/apps/v4/content/docs/(root)/changelog.mdx
@@ -165,35 +165,35 @@ Here's a preview with icons:
 
 <ComponentPreview
   name="input-group-icon"
-  className="[&_.preview]:h-[300px] [&_pre]:!h-[300px]"
+  className="[&_.preview]:min-h-[300px] [&_pre]:!h-[300px]"
 />
 
 You can also add buttons to the input group.
 
 <ComponentPreview
   name="input-group-button"
-  className="[&_.preview]:h-[300px] [&_pre]:!h-[300px]"
+  className="[&_.preview]:min-h-[300px] [&_pre]:!h-[300px]"
 />
 
 Or text, labels, tooltips,...
 
 <ComponentPreview
   name="input-group-text"
-  className="[&_.preview]:h-[350px] [&_pre]:!h-[350px]"
+  className="[&_.preview]:min-h-[350px] [&_pre]:!h-[350px]"
 />
 
 It also works with textareas so you can build really complex components with lots of knobs and dials or yet another prompt form.
 
 <ComponentPreview
   name="input-group-textarea"
-  className="[&_.preview]:h-[450px] [&_pre]:!h-[450px]"
+  className="[&_.preview]:min-h-[450px] [&_pre]:!h-[450px]"
 />
 
 Oh here are some cool ones with spinners:
 
 <ComponentPreview
   name="input-group-spinner"
-  className="[&_.preview]:h-[350px] [&_pre]:!h-[350px]"
+  className="[&_.preview]:min-h-[350px] [&_pre]:!h-[350px]"
 />
 
 ### Field
@@ -232,7 +232,7 @@ It works with all form controls. Inputs, textareas, selects, checkboxes, radios,
 
 <ComponentPreview
   name="field-demo"
-  className="[&_.preview]:h-[850px] [&_pre]:!h-[850px]"
+  className="[&_.preview]:min-h-[850px] [&_pre]:!h-[850px]"
 />
 
 Here are some checkbox fields:
@@ -265,7 +265,7 @@ between vertical and horizontal layouts based on container width. Done.
 
 <ComponentPreview
   name="field-responsive"
-  className="[&_.preview]:h-[600px] [&_pre]:!h-[600px]"
+  className="[&_.preview]:min-h-[600px] [&_pre]:!h-[600px]"
 />
 
 Wait here's more. Wrap your fields in `FieldLabel` to create a selectable field group. Really easy. And it looks great.
