docs: add component list to mdx

--- a/apps/v4/content/docs/components/index.mdx
+++ b/apps/v4/content/docs/components/index.mdx
@@ -3,7 +3,61 @@ title: Components
 description: Here you can find all the components available in the library. We are working on adding more components.
 ---
 
-<ComponentsList />
+- [Accordion](/docs/components/accordion.md)
+- [Alert Dialog](/docs/components/alert-dialog.md)
+- [Alert](/docs/components/alert.md)
+- [Aspect Ratio](/docs/components/aspect-ratio.md)
+- [Avatar](/docs/components/avatar.md)
+- [Badge](/docs/components/badge.md)
+- [Breadcrumb](/docs/components/breadcrumb.md)
+- [Button](/docs/components/button.md)
+- [Calendar](/docs/components/calendar.md)
+- [Card](/docs/components/card.md)
+- [Carousel](/docs/components/carousel.md)
+- [Chart](/docs/components/chart.md)
+- [Checkbox](/docs/components/checkbox.md)
+- [Collapsible](/docs/components/collapsible.md)
+- [Combobox](/docs/components/combobox.md)
+- [Command](/docs/components/command.md)
+- [Context Menu](/docs/components/context-menu.md)
+- [Data Table](/docs/components/data-table.md)
+- [Date Picker](/docs/components/date-picker.md)
+- [Dialog](/docs/components/dialog.md)
+- [Drawer](/docs/components/drawer.md)
+- [Dropdown Menu](/docs/components/dropdown-menu.md)
+- [Empty](/docs/components/empty.md)
+- [Field](/docs/components/field.md)
+- [Form](/docs/components/form.md)
+- [Hover Card](/docs/components/hover-card.md)
+- [Input OTP](/docs/components/input-otp.md)
+- [Input](/docs/components/input.md)
+- [Item](/docs/components/item.md)
+- [Kbd](/docs/components/kbd.md)
+- [Label](/docs/components/label.md)
+- [Menubar](/docs/components/menubar.md)
+- [Navigation Menu](/docs/components/navigation-menu.md)
+- [Pagination](/docs/components/pagination.md)
+- [Popover](/docs/components/popover.md)
+- [Progress](/docs/components/progress.md)
+- [Radio Group](/docs/components/radio-group.md)
+- [Resizable](/docs/components/resizable.md)
+- [Scroll Area](/docs/components/scroll-area.md)
+- [Select](/docs/components/select.md)
+- [Separator](/docs/components/separator.md)
+- [Sheet](/docs/components/sheet.md)
+- [Sidebar](/docs/components/sidebar.md)
+- [Skeleton](/docs/components/skeleton.md)
+- [Slider](/docs/components/slider.md)
+- [Sonner](/docs/components/sonner.md)
+- [Switch](/docs/components/switch.md)
+- [Table](/docs/components/table.md)
+- [Tabs](/docs/components/tabs.md)
+- [Textarea](/docs/components/textarea.md)
+- [Toast](/docs/components/toast.md)
+- [Toggle Group](/docs/components/toggle-group.md)
+- [Toggle](/docs/components/toggle.md)
+- [Tooltip](/docs/components/tooltip.md)
+- [Typography](/docs/components/typography.md)
 
 ---
 
